--- a/ANAHIM.HTML
+++ b/ANAHIM.HTML
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StudySmart Analytics</title>
+    <title>StreakWise Analytics</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/daterangepicker@3.1.0/daterangepicker.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ag-grid-community@28.2.1/styles/ag-grid.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ag-grid-community@28.2.1/styles/ag-theme-alpine.css">
+ <link rel="manifest" href="manifest.json">
     <style>
         :root {
             --primary-color: #4361ee;
@@ -3058,6 +3059,7 @@ function formatDecimal(value, maxDecimals) {
             elements.exportModal.hide();
         }
     </script>
+ <script src="service-worker.js"></script>
 </body>
 
 </html>
