--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             background-color: var(--card-bg-light);
             height: 100%;
+            margin-left: 20px;
+            margin-right: 20px;
         }
 
         .dark-mode .card {
@@ -96,7 +98,11 @@
             border-bottom: none;
             border-radius: 12px 12px 0 0 !important;
             padding: 16px 20px;
+            font-size: 14px;
+            height: 45px;
         }
+
+        
 
 /* Adjust the Performance Metrics section layout */
 #efficiencyGauge {
@@ -371,25 +377,52 @@
             position: fixed;
             bottom: 30px;
             right: 30px;
-            width: 60px;
-            height: 60px;
+            width: 50px;
+            height: 50px;
             border-radius: 50%;
             background-color: var(--primary-color);
             color: white;
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 24px;
+            font-size: 18px;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
             cursor: pointer;
             z-index: 1000;
             transition: all 0.3s ease;
+
         }
 
         .floating-btn:hover {
             transform: scale(1.1);
             background-color: var(--secondary-color);
         }
+
+        .form-control{
+            background-color: #ffffff;
+            color: #000000;
+            border-radius: 10px;
+            font-size: 13px;
+            height: 35px;
+        }
+
+        .form-control:hover{
+            background-color: #fcfcfc;
+        }
+
+        .input-group-text{
+            background-color: #ffffff;
+            color: #000000;
+            border-radius: 10px;
+            font-size: 13px;
+            height: 35px;
+        }
+
+        .input-group-text:hover{
+            background-color: #fffbfb;
+        }
+
+
 
         .modal-content {
             border-radius: 12px;
@@ -610,7 +643,13 @@
             border-radius: 10px;
         }
 
-
+ /* Apply rounded corners and shadow to full grid */
+.ag-root-wrapper {
+    border-radius: 13px;
+    overflow: hidden;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.08); /* optional soft shadow */
+    border: 1px solid #e5e7eb; /* optional light border */
+}
 
 
         
