--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <i class="bi bi-bar-chart-line-fill me-2"></i>StudySmart Analytics
+                <i class="bi bi-bar-chart-line-fill me-2"></i>StreakWeak Analytics
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
